--- a/index.html
+++ b/index.html
@@ -80,11 +80,12 @@
 
 <div class="flex-container" id="planos"> 
      <h2>planos</h2>
-
+ <br>
     <div class="list-planos"> 
 
         <div class="item-planos">
           <h3>Plano 1</h3>
+          <br>
            <ul>
               <li>Suporte 24h</li>
               <li>Serviços de quarto</li>
@@ -95,6 +96,7 @@
 
         <div class="item-planos">
             <h3>Plano 2</h3>
+            <br>
           <ul>
               <li>Suporte 24h</li>
               <li>Serviços de quarto</li>
@@ -107,6 +109,7 @@
 
          <div class="item-planos">
             <h3>Plano 3</h3>
+            <br>
           <ul>
                <li>Suporte 24h</li>
                <li>Serviços de quarto</li>
@@ -122,8 +125,10 @@
 </div>
 
 <footer>
-    <p>&copy; 2022 CSS Flexbox</p>
-    <p>Desenvolvido por: Tiago G Mendonça</p>
+    <div class="flex-container footer"> <p>&copy; 2022 CSS Flexbox</p>
+        <p>Desenvolvido por: Tiago G Mendonça</p>
+    </div>
+    
 </footer>
 
 </body>
